feature: CRUD menu items
